# fast-api-demo

./: .env  .env.test  .gitignore  Dockerfile  README.md  pyproject.toml
app/: main.py  settings.py
app/core/: config.py  logger.py
app/core/middleware/: logger.py  trace_middelware.py
scripts/: init_db.py
tests/: test_main.py
tests/api/: test_items.py
