[project]
name = "fast-api-demo"
version = "0.1.0"
description = "A demo FastAPI application"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.116.1",
    "uvicorn==0.35.0",
    "pydantic-settings==2.6.1",
    "pydantic==2.11.9",
    "loguru==0.7.3",
    "python-dotenv==1.1.1",
]
